--- a/ffmpeg-light.cabal
+++ b/ffmpeg-light.cabal
@@ -1,5 +1,5 @@
 name:                ffmpeg-light
-version:             0.1.0.1
+version:             0.1.1
 synopsis:            Minimal bindings to the FFmpeg library.
 
 description:         Stream frames from an encoded video, or stream frames to
@@ -33,6 +33,10 @@ source-repository head
   type:     git
   location: http://github.com/acowley/ffmpeg-light.git
 
+flag BuildDemo
+  description: Build demo executable
+  default:     False
+
 library
   exposed-modules:     Codec.FFmpeg,
                        Codec.FFmpeg.Common,
@@ -40,6 +44,7 @@ library
                        Codec.FFmpeg.Encode,
                        Codec.FFmpeg.Enums,
                        Codec.FFmpeg.Juicy,
+                       Codec.FFmpeg.Scaler,
                        Codec.FFmpeg.Types,
                        Codec.FFmpeg.Internal.Debug
   build-tools:         hsc2hs
@@ -53,3 +58,12 @@ library
   include-dirs:        src
   default-language:    Haskell2010
   ghc-options:         -Wall
+
+executable demo
+  if !flag(BuildDemo)
+    buildable:      False
+  build-depends:    base < 5, ffmpeg-light, vector, mtl
+  hs-source-dirs:   demo
+  main-is:          Main.hs
+  default-language: Haskell2010
+  
