--- a/ffmpeg-light.cabal
+++ b/ffmpeg-light.cabal
@@ -1,5 +1,5 @@
 name:                ffmpeg-light
-version:             0.3
+version:             0.3.0.1
 synopsis:            Minimal bindings to the FFmpeg library.
 
 description:         Stream frames from an encoded video, or stream frames to
@@ -26,7 +26,7 @@ maintainer:          acowley@gmail.com
 copyright:           Copyright (C) 2014 Anthony Cowley
 category:            Codec
 build-type:          Simple
-extra-source-files:  src/hscMacros.h, src/nameCompat.h
+extra-source-files:  src/hscMacros.h, src/nameCompat.h, CHANGELOG.md
 cabal-version:       >=1.10
 
 source-repository head
