--- a/ffmpeg-light.cabal
+++ b/ffmpeg-light.cabal
@@ -1,5 +1,5 @@
 name:                ffmpeg-light
-version:             0.3.0.1
+version:             0.3.1
 synopsis:            Minimal bindings to the FFmpeg library.
 
 description:         Stream frames from an encoded video, or stream frames to
@@ -37,6 +37,10 @@ flag BuildDemo
   description: Build demo executable
   default:     False
 
+flag BuildRasterDemo
+  description: Build Rasterific demo executable
+  default:     False
+
 library
   exposed-modules:     Codec.FFmpeg,
                        Codec.FFmpeg.Common,
@@ -46,7 +50,8 @@ library
                        Codec.FFmpeg.Juicy,
                        Codec.FFmpeg.Scaler,
                        Codec.FFmpeg.Types,
-                       Codec.FFmpeg.Internal.Debug
+                       Codec.FFmpeg.Internal.Debug,
+                       Codec.FFmpeg.Internal.V3
   build-tools:         hsc2hs
   build-depends:       base >=4.6 && < 5,
                        vector >= 0.10.9 && < 0.11,
@@ -68,4 +73,16 @@ executable demo
   main-is:          Main.hs
   default-language: Haskell2010
   ghc-options:      -Wall
+
+executable raster
+  if !flag(BuildRasterDemo)
+    buildable:      False
+  build-depends:    base < 5, vector, mtl, transformers,
+                    ffmpeg-light, JuicyPixels
+  if flag(BuildRasterDemo)
+    build-depends:  Rasterific, linear
+  hs-source-dirs:   demo
+  main-is:          Raster.hs
+  default-language: Haskell2010
+  ghc-options:      -Wall -O2
   
