Fixed corrupted output of palettized GIFs
* Added palettization options

** Using `avPixFmtRgb8` results in a small file

** Using the default pixel format (`avPixFmtPal8`) results in a good-looking,
   fairly large file thanks to JuicyPixels's `palettize` function.

** Setting the `epPreset` field of the `EncodingParams` value passed to
   `frameWriter` to `"dither"` results in an even prettier, even larger GIF
   file (again, thanks to JuicyPixels's `palettize` function).

** See the `demo/Raster.hs` for examples.

--- a/ffmpeg-light.cabal
+++ b/ffmpeg-light.cabal
@@ -1,5 +1,5 @@
 name:                ffmpeg-light
-version:             0.3.1
+version:             0.4
 synopsis:            Minimal bindings to the FFmpeg library.
 
 description:         Stream frames from an encoded video, or stream frames to
@@ -51,7 +51,7 @@ library
                        Codec.FFmpeg.Scaler,
                        Codec.FFmpeg.Types,
                        Codec.FFmpeg.Internal.Debug,
-                       Codec.FFmpeg.Internal.V3
+                       Codec.FFmpeg.Internal.Linear
   build-tools:         hsc2hs
   build-depends:       base >=4.6 && < 5,
                        vector >= 0.10.9 && < 0.11,
