--- a/ffmpeg-light.cabal
+++ b/ffmpeg-light.cabal
@@ -1,5 +1,5 @@
 name:                ffmpeg-light
-version:             0.7.0.1
+version:             0.7.1
 synopsis:            Minimal bindings to the FFmpeg library.
 
 description:         Stream frames from an encoded video, or stream frames to
@@ -35,10 +35,12 @@ source-repository head
 flag BuildDemo
   description: Build demo executable
   default:     False
+  manual:      True
 
 flag BuildRasterDemo
   description: Build Rasterific demo executable
   default:     False
+  manual:      True
 
 library
   exposed-modules:     Codec.FFmpeg,
