Added apt-get update to .travis.yml
apt-get installation recently broke on travis-ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: haskell
 
 before_install:
+  - sudo apt-get update
   - sudo apt-get -qq -y install libavutil-dev libavformat-dev libavcodec-dev libswscale-dev
