--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,32 @@
-language: haskell
+env:
+  - CABALVER=1.18 GHCVER=7.8.3
+  - CABALVER=1.22 GHCVER=7.10.1
 
 before_install:
-  - sudo apt-get update
-  - sudo apt-get -qq -y install libavutil-dev libavformat-dev libavcodec-dev libswscale-dev
+  - travis_retry sudo add-apt-repository -y ppa:hvr/ghc
+  - travis_retry sudo apt-get update
+  - travis_retry sudo apt-get -qq -y install cabal-install-$CABALVER ghc-$GHCVER libavutil-dev libavformat-dev libavcodec-dev libswscale-dev
+  - export PATH=/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$PATH
+
+install:
+  - cabal --version
+  - echo "$(ghc --version) [$(ghc --print-project-git-commit-id 2> /dev/null || echo '?')]"
+  - travis_retry cabal update
+  - cabal install --dependencies-only --enable-tests
+
+script:
+  - cabal configure --enable-tests
+  - cabal build
+  - cabal test
+  - cabal check
+  - cabal sdist
+
+# The following scriptlet checks that the resulting source distribution can be built & installed
+  - export SRC_TGZ=$(cabal info . | awk '{print $2 ".tar.gz";exit}') ;
+    cd dist/;
+    if [ -f "$SRC_TGZ" ]; then
+       cabal install --force-reinstalls "$SRC_TGZ";
+    else
+       echo "expected '$SRC_TGZ' not found";
+       exit 1;
+    fi
