--- a/ffmpeg-light.cabal
+++ b/ffmpeg-light.cabal
@@ -62,7 +62,7 @@ library
                        transformers >= 0.4.1 && < 0.5,
                        mtl >= 2.2.1 && < 2.3,
                        JuicyPixels >= 3.1 && < 3.3
-  pkgconfig-depends:   libavutil, libavformat, libavcodec, libswscale
+  pkgconfig-depends:   libavutil, libavformat, libavcodec, libswscale, libavdevice
   hs-source-dirs:      src
   include-dirs:        src
   default-language:    Haskell2010
