--- a/ffmpeg-light.cabal
+++ b/ffmpeg-light.cabal
@@ -73,7 +73,7 @@ executable demo
     buildable:      False
   build-depends:    base < 5, vector, mtl, transformers, JuicyPixels
   if flag(BuildDemo)
-    build-depends:  ffmpeg-light
+    build-depends:  ffmpeg-light, time
   hs-source-dirs:   demo
   main-is:          Main.hs
   default-language: Haskell2010
