--- a/stack.yaml
+++ b/stack.yaml
@@ -1,47 +1,37 @@
-resolver: lts-6.4
+resolver: nightly-2016-06-21
 
-# User packages to be built.
-# Various formats can be used as shown in the example below.
-#
-# packages:
-# - some-directory
-# - https://example.com/foo/bar/baz-0.0.2.tar.gz
-# - location:
-#    git: https://github.com/commercialhaskell/stack.git
-#    commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
-# - location: https://github.com/commercialhaskell/stack/commit/e7b331f14bcffb8367cd58fbfc8b40ec7642100a
-#   extra-dep: true
-#  subdirs:
-#  - auto-update
-#  - wai
-#
-# A package marked 'extra-dep: true' will only be built if demanded by a
-# non-dependency (i.e. a user package), and its test suites and benchmarks
-# will not be run. This is useful for tweaking upstream packages.
 packages:
 - '.'
 
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
-extra-deps: []
+extra-deps:
+- Rasterific-0.6.1.1
+- FontyFruity-0.5.3.2
 
 # Override default flag values for local packages and extra-deps
-flags: {}
+flags:
+  ffmpeg-light:
+    BuildDemo: true
+    BuildRasterDemo: true
 
 # Extra package databases containing global packages
 extra-package-dbs: []
 
 # Control whether we use the GHC we find on the path
-# system-ghc: true
-system-ghc: false
+system-ghc: true
+nix:
+  enable: true
+  packages: [ ffmpeg-full, pkgconfig, zlib ]
+  pure: false
 
 # Extra directories used by stack for building
 # extra-include-dirs: [/path/to/dir]
 # extra-lib-dirs: [/path/to/dir]
 
 # nix-store -r $(nix-instantiate '<nixpkgs>' -A ffmpeg-full)
-extra-include-dirs: [/nix/store/nq5n4053yhkxwwlirjm4k8zh1r1hzc16-ffmpeg-full-3.0/include]
-extra-lib-dirs: [/nix/store/nq5n4053yhkxwwlirjm4k8zh1r1hzc16-ffmpeg-full-3.0/lib]
+# extra-include-dirs: [/nix/store/nq5n4053yhkxwwlirjm4k8zh1r1hzc16-ffmpeg-full-3.0/include]
+# extra-lib-dirs: [/nix/store/nq5n4053yhkxwwlirjm4k8zh1r1hzc16-ffmpeg-full-3.0/lib]
 #
 # Allow a newer minor version of GHC than the snapshot specifies
 # compiler-check: newer-minor
