--- a/ffmpeg-light.cabal
+++ b/ffmpeg-light.cabal
@@ -54,7 +54,8 @@ library
                        Codec.FFmpeg.Scaler,
                        Codec.FFmpeg.Types,
                        Codec.FFmpeg.Internal.Debug,
-                       Codec.FFmpeg.Internal.Linear
+                       Codec.FFmpeg.Internal.Linear,
+                       Codec.FFmpeg.Buffer
   build-tools:         hsc2hs
   build-depends:       base >=4.6 && < 4.10,
                        either,
@@ -62,7 +63,9 @@ library
                        vector >= 0.10.9 && < 0.12,
                        transformers >= 0.4.1 && < 0.6,
                        mtl >= 2.2.1 && < 2.3,
-                       JuicyPixels >= 3.1 && < 3.3
+                       JuicyPixels >= 3.1 && < 3.3,
+                       bytestring
+                       
   pkgconfig-depends:   libavutil, libavformat, libavcodec, libswscale, libavdevice
   hs-source-dirs:      src
   include-dirs:        src
