--- a/ffmpeg-light.cabal
+++ b/ffmpeg-light.cabal
@@ -43,6 +43,11 @@ flag BuildRasterDemo
   default:     False
   manual:      True
 
+flag BuildVPlayDemo
+  description: Build video player demo executable
+  default:     False
+  manual:      True
+
 library
   exposed-modules:     Codec.FFmpeg,
                        Codec.FFmpeg.Common,
@@ -91,4 +96,15 @@ executable raster
   hs-source-dirs:   demo
   main-is:          Raster.hs
   default-language: Haskell2010
+  ghc-options:      -Wall -O2
+  
+executable vplay
+  if !flag(BuildVPlayDemo)
+    buildable:       False
+  build-depends:     base < 5, mtl, transformers, text
+  if flag(BuildVPlayDemo)
+    build-depends:   ffmpeg-light, sdl2
+  hs-source-dirs:    demo
+  main-is:           VPlay.hs
+  default-language:  Haskell2010
   ghc-options:      -Wall -O2
