--- a/stack.yaml
+++ b/stack.yaml
@@ -8,12 +8,14 @@ packages:
 extra-deps:
 - Rasterific-0.6.1.1
 - FontyFruity-0.5.3.2
+- sdl2-2.1.3
 
 # Override default flag values for local packages and extra-deps
 flags:
   ffmpeg-light:
     BuildDemo: true
     BuildRasterDemo: true
+    BuildVPlayDemo: true
 
 # Extra package databases containing global packages
 extra-package-dbs: []
