--- a/ffmpeg-light.cabal
+++ b/ffmpeg-light.cabal
@@ -1,5 +1,5 @@
 name:                ffmpeg-light
-version:             0.11.3
+version:             0.12.0
 synopsis:            Minimal bindings to the FFmpeg library.
 
 description:         Stream frames from an encoded video, or stream frames to
@@ -15,7 +15,7 @@ description:         Stream frames from an encoded video, or stream frames to
                      > go = do (getFrame, cleanup) <- imageReader "myVideo.mov"
                      >         (fmap ImageRGB8 <$> getFrame) <* cleanup
                      .
-                     Tested with FFmpeg 3.1
+                     Tested with FFmpeg 3.1 - 3.2.4
 
 license:             BSD3
 license-file:        LICENSE
@@ -69,7 +69,7 @@ library
                        mtl >= 2.2.1 && < 2.3,
                        JuicyPixels >= 3.1 && < 3.3,
                        bytestring
-                       
+
   pkgconfig-depends:   libavutil, libavformat, libavcodec, libswscale, libavdevice
   hs-source-dirs:      src
   include-dirs:        src
@@ -97,7 +97,7 @@ executable raster
   main-is:          Raster.hs
   default-language: Haskell2010
   ghc-options:      -Wall -O2
-  
+
 executable vplay
   if !flag(BuildVPlayDemo)
     buildable:       False
