--- a/ffmpeg-light.cabal
+++ b/ffmpeg-light.cabal
@@ -28,7 +28,7 @@ category:            Codec
 build-type:          Simple
 extra-source-files:  src/hscMacros.h, src/nameCompat.h, CHANGELOG.md
 cabal-version:       >=1.10
-tested-with:         GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.2
+tested-with:         GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.2, GHC == 8.6.1
 
 source-repository head
   type:     git
@@ -67,7 +67,7 @@ library
                        Codec.FFmpeg.Internal.Debug,
                        Codec.FFmpeg.Internal.Linear
   build-tools:         hsc2hs
-  build-depends:       base >=4.6 && < 4.12,
+  build-depends:       base >=4.6 && < 4.13,
                        either,
                        exceptions,
                        vector >= 0.10.9 && < 0.13,
