--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,20 @@ before_cache:
   - rm -rfv $CABALHOME/packages/head.hackage
 matrix:
   include:
+    - compiler: ghc-8.8.1
+      addons:
+        apt:
+          sources:
+            - hvr-ghc
+          packages:
+            - ghc-8.8.1
+            - cabal-install-3.0
+            - ffmpeg
+            - libavutil-dev
+            - libavformat-dev
+            - libavcodec-dev
+            - libswscale-dev
+            - libavdevice-dev
     - compiler: ghc-8.4.2
       addons:
         apt:
