--- a/ffmpeg-light.cabal
+++ b/ffmpeg-light.cabal
@@ -15,7 +15,7 @@ description:         Stream frames from an encoded video, or stream frames to
                      > go = do (getFrame, cleanup) <- imageReader "myVideo.mov"
                      >         (fmap ImageRGB8 <$> getFrame) <* cleanup
                      .
-                     Tested with FFmpeg 3.1 - 3.4.2
+                     Tested with FFmpeg 3.1 - 3.4.6
 
 license:             BSD3
 license-file:        LICENSE
@@ -28,7 +28,7 @@ category:            Codec
 build-type:          Simple
 extra-source-files:  src/hscMacros.h, src/nameCompat.h, CHANGELOG.md
 cabal-version:       >=1.10
-tested-with:         GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.2
+tested-with:         GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.2, GHC == 8.8.1
 
 source-repository head
   type:     git
