--- a/stack.yaml
+++ b/stack.yaml
@@ -1,4 +1,4 @@
-resolver: nightly-2016-06-21
+resolver: nightly-2019-10-06
 
 packages:
 - '.'
@@ -6,9 +6,8 @@ packages:
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
 extra-deps:
-- Rasterific-0.6.1.1
-- FontyFruity-0.5.3.2
-- sdl2-2.1.3
+- FontyFruity-0.5.3.5@sha256:d0bbbc5bef14f229c8e90271365916b1b470bc0928ff4670f7d1885aec3378cf,2166
+- Rasterific-0.7.4.4@sha256:05ca492a2c95e65da8d120281f5e579321cfe47b586a5730dce54ae1c52d1557,6008
 
 # Override default flag values for local packages and extra-deps
 flags:
