--- a/stack.yaml
+++ b/stack.yaml
@@ -1,14 +1,11 @@
-resolver: nightly-2016-06-21
+resolver: lts-15.6
 
 packages:
 - '.'
 
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
-extra-deps:
-- Rasterific-0.6.1.1
-- FontyFruity-0.5.3.2
-- sdl2-2.1.3
+extra-deps: []
 
 # Override default flag values for local packages and extra-deps
 flags:
@@ -17,6 +14,7 @@ flags:
     BuildRasterDemo: true
     BuildVPlayDemo: true
     BuildTranscodeDemo: true
+    BuildAudioDemo: true
 
 # Extra package databases containing global packages
 extra-package-dbs: []
