--- a/stack.yaml
+++ b/stack.yaml
@@ -18,6 +18,7 @@ flags:
     BuildVPlayDemo: true
     BuildTranscodeDemo: true
     BuildAudioExtractDemo: true
+    BuildAudioSinDemo: true
 
 # Extra package databases containing global packages
 extra-package-dbs: []
