--- a/ffmpeg-light.cabal
+++ b/ffmpeg-light.cabal
@@ -156,7 +156,7 @@ executable audio-sin
     buildable:      False
   build-depends:    base < 5
   if flag(BuildAudioSinDemo)
-    build-depends:  ffmpeg-light, mtl, vector
+    build-depends:  ffmpeg-light, mtl, vector, JuicyPixels
   hs-source-dirs:   demo
   main-is:          AudioSin.hs
   default-language: Haskell2010
