--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,6 +69,10 @@ jobs:
     - uses: actions/checkout@v2
       if: github.event.action == 'opened' || github.event.action == 'synchronize' || github.event.ref == 'refs/heads/master'
 
+    - name: Setup ffmpeg
+      run: |
+        sudo apt-get install ffmpeg libavutil-dev libavformat-dev libavcodec-dev libswscale-dev libavdevice-dev
+
     - uses: actions/setup-haskell@v1
       name: Setup Haskell Stack
       with:
