CI: run apt-get update before install

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ jobs:
 
     - name: Setup ffmpeg
       run: |
+        sudo apt-get update
         sudo apt-get install ffmpeg libavutil-dev libavformat-dev libavcodec-dev libswscale-dev libavdevice-dev
 
     - uses: actions/setup-haskell@v1
@@ -71,6 +72,7 @@ jobs:
 
     - name: Setup ffmpeg
       run: |
+        sudo apt-get update
         sudo apt-get install ffmpeg libsdl2-dev libavutil-dev libavformat-dev libavcodec-dev libswscale-dev libavdevice-dev
 
     - uses: actions/setup-haskell@v1
