--- a/ffmpeg-light.cabal
+++ b/ffmpeg-light.cabal
@@ -28,7 +28,7 @@ category:            Codec
 build-type:          Simple
 extra-source-files:  src/hscMacros.h, src/nameCompat.h, CHANGELOG.md
 cabal-version:       >=1.10
-tested-with:         GHC == 8.6.5 || == 8.8.4 || == 8.10.7 || == 9.0.2 || == 9.2.1
+tested-with:         GHC == 8.6.5 || == 8.8.4 || == 8.10.7 || == 9.0.2 || == 9.2.1 || == 9.6.11
 
 source-repository head
   type:     git
@@ -82,10 +82,10 @@ library
   build-depends:       base >=4.6 && < 5,
                        either,
                        exceptions,
-                       vector >= 0.10.9 && < 0.13,
+                       vector >= 0.10.9 && < 0.14,
                        stm >= 2.0.0.0 && < 3.0.0.0.0,
                        transformers >= 0.4.1 && < 0.7,
-                       mtl >= 2.2.1 && < 2.3,
+                       mtl >= 2.2.1 && < 2.4,
                        JuicyPixels >= 3.1 && < 3.4,
                        bytestring
 
