--- a/ffmpeg-light.cabal
+++ b/ffmpeg-light.cabal
@@ -88,6 +88,7 @@ library
                        transformers >= 0.4.1 && < 0.7,
                        mtl >= 2.2.1 && < 2.4,
                        JuicyPixels >= 3.1 && < 3.4,
+                       JuicyPixels-extra >= 0.6.0,
                        bytestring,
                        containers
 
