--- a/ffmpeg-light.cabal
+++ b/ffmpeg-light.cabal
@@ -28,7 +28,7 @@ category:            Codec
 build-type:          Simple
 extra-source-files:  src/hscMacros.h, src/nameCompat.h, CHANGELOG.md
 cabal-version:       >=1.10
-tested-with:         GHC == 9.2.8 || == 9.4.8 || == 9.6.4
+tested-with:         GHC == 8.8.4 || == 8.10.7 || == 9.2.8 || == 9.4.8 || == 9.6.4
 
 source-repository head
   type:     git
@@ -88,7 +88,7 @@ library
                        transformers >= 0.4.1 && < 0.7,
                        mtl >= 2.2.1 && < 2.4,
                        JuicyPixels >= 3.1 && < 3.4,
-                       JuicyPixels-extra >= 0.6.0,
+                       JuicyPixels-extra >= 0.5.2,
                        bytestring,
                        containers
 
